[build-system]
requires = ["hatchling<1.22"]
build-backend = "hatchling.build"

[project]
name = "paybridge-np"
version = "0.2.0"
description = "Official Python SDK for the PayBridgeNP payment gateway - accept eSewa, Khalti, and ConnectIPS through a single API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "PayBridgeNP", email = "support@paybridgenp.com" }]
keywords = [
    "paybridge",
    "nepal",
    "payments",
    "esewa",
    "khalti",
    "connectips",
    "payment-gateway",
    "nepal-payments",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://paybridgenp.com"
Documentation = "https://docs.paybridgenp.com"
Repository = "https://github.com/paybridgenp/paybridgenp-python-sdk"
Issues = "https://github.com/paybridgenp/paybridgenp-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/paybridge_np"]

[tool.pytest.ini_options]
testpaths = ["tests"]
